--- a/index.html
+++ b/index.html
@@ -4,89 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wizeminds | Unlocking Business Potential through Advanced AI Solutions</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1 class="logo">Wizeminds</h1>
-            <nav>
-                <ul>
-                    <li><a href="#introduction">Introduction</a></li>
-                    <li><a href="#vision">Our Vision</a></li>
-                    <li><a href="#sets-us-apart">What Sets Us Apart</a></li>
-                    <li><a href="#business-use-cases">Business Use Cases</a></li>
-                    <li><a href="#our-approach">Our Approach</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">Wizeminds</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link" href="#introduction">Introduction</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#vision">Our Vision</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#sets-us-apart">What Sets Us Apart</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#business-use-cases">Business Use Cases</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#our-approach">Our Approach</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <section id="introduction">
-        <div class="container">
-            <h2>Unlocking Business Potential through Advanced AI Solutions</h2>
-            <p>
-                Wizeminds is a forward-thinking AI Automation Agency co-founded by Michael Wolf and Jonathan TOuitou, distinguished experts with a collective experience of 45 years in the financial and technology sectors. At Wizeminds, we believe in harnessing the power of Artificial Intelligence to drive efficiency, optimize operations, and revolutionize the way businesses work.
-            </p>
-        </div>
-    </section>
+    <main role="main">
+        <section id="introduction" class="py-5">
+            <div class="container">
+                <h2>Unlocking Business Potential through Advanced AI Solutions</h2>
+                <p>
+                    Wizeminds is a forward-thinking AI Automation Agency co-founded by Michael Wolf and Jonathan TOuitou, distinguished experts with a collective experience of 45 years in the financial and technology sectors. At Wizeminds, we believe in harnessing the power of Artificial Intelligence to drive efficiency, optimize operations, and revolutionize the way businesses work.
+                </p>
+            </div>
+        </section>
 
-    <section id="vision">
-        <div class="container">
-            <h2>Our Vision</h2>
-            <p>
-                To be the leading AI Automation Agency, empowering businesses across industries to achieve unparalleled growth and success through transformative AI solutions.
-            </p>
-        </div>
-    </section>
+        <section id="vision" class="py-5">
+            <div class="container">
+                <h2>Our Vision</h2>
+                <p>
+                    To be the leading AI Automation Agency, empowering businesses across industries to achieve unparalleled growth and success through transformative AI solutions.
+                </p>
+            </div>
+        </section>
 
-    <section id="sets-us-apart">
-        <div class="container">
-            <h2>What Sets Us Apart</h2>
-            <ul>
-                <li>Domain Expertise: Our team's extensive background in both finance and technology enables us to understand your business challenges comprehensively. This expertise allows us to craft tailored AI solutions that align perfectly with your unique requirements.</li>
-                <li>Cutting-Edge AI Technologies: We leverage the latest advancements in AI, Python libraries, and OpenAI to deliver state-of-the-art automation solutions. Our dedication to staying at the forefront of innovation ensures you benefit from the most effective and up-to-date AI tools.</li>
-                <li>Customized Offerings: Every business is unique, and we recognize that. Our AI automation services are customized to fit your specific processes and goals, maximizing the impact of our solutions on your business.</li>
-            </ul>
-        </div>
-    </section>
+        <section id="sets-us-apart" class="py-5">
+            <div class="container">
+                <h2>What Sets Us Apart</h2>
+                <ul>
+                    <li>Domain Expertise: Our team's extensive background in both finance and technology enables us to understand your business challenges comprehensively. This expertise allows us to craft tailored AI solutions that align perfectly with your unique requirements.</li>
+                    <li>Cutting-Edge AI Technologies: We leverage the latest advancements in AI, Python libraries, and OpenAI to deliver state-of-the-art automation solutions. Our dedication to staying at the forefront of innovation ensures you benefit from the most effective and up-to-date AI tools.</li>
+                    <li>Customized Offerings: Every business is unique, and we recognize that. Our AI automation services are customized to fit your specific processes and goals, maximizing the impact of our solutions on your business.</li>
+                </ul>
+            </div>
+        </section>
 
-    <section id="business-use-cases">
-        <div class="container">
-            <h2>Business Use Cases</h2>
-            <ul>
-                <li>Reconciliation & Accounting: Streamline your financial processes and automate tedious reconciliation tasks, ensuring accurate and timely accounting.</li>
-                <li>Document Summarization & Interpretation: Extract essential information from lengthy documents and interpret complex banking records with AI-powered document analysis.</li>
-                <li>Automated Report Generation: Eliminate manual report creation and generate automated reports with precision, saving time and resources.</li>
-                <li>Marketing Automation: Personalize your marketing efforts with AI-driven automation, reaching the right audience with targeted campaigns.</li>
-                <li>Data Analysis & Visualization: Gain actionable insights from your data with AI-driven analytics and generate informative charts and visualizations.</li>
-                <li>Trading Bots: Implement AI-powered trading bots to automate investment strategies and optimize trading decisions.</li>
-                <li>Automated Data Analysis: Accelerate decision-making with automated data analysis, detecting patterns and trends for data-driven choices.</li>
-            </ul>
-        </div>
-    </section>
+        <section id="business-use-cases" class="py-5">
+            <div class="container">
+                <h2>Business Use Cases</h2>
+                <ul>
+                    <li>Reconciliation & Accounting: Streamline your financial processes and automate tedious reconciliation tasks, ensuring accurate and timely accounting.</li>
+                    <li>Document Summarization & Interpretation: Extract essential information from lengthy documents and interpret complex banking records with AI-powered document analysis.</li>
+                    <li>Automated Report Generation: Eliminate manual report creation and generate automated reports with precision, saving time and resources.</li>
+                    <li>Marketing Automation: Personalize your marketing efforts with AI-driven automation, reaching the right audience with targeted campaigns.</li>
+                    <li>Data Analysis & Visualization: Gain actionable insights from your data with AI-driven analytics and generate informative charts and visualizations.</li>
+                    <li>Trading Bots: Implement AI-powered trading bots to automate investment strategies and optimize trading decisions.</li>
+                    <li>Automated Data Analysis: Accelerate decision-making with automated data analysis, detecting patterns and trends for data-driven choices.</li>
+                </ul>
+            </div>
+        </section>
 
-    <section id="our-approach">
-        <div class="container">
-            <h2>Our Approach</h2>
-            <p>
-                At Wizeminds, we combine our expertise in technology and finance with in-depth business process analysis. This unique approach enables us to identify areas for automation and optimization, ensuring our AI solutions align seamlessly with your business objectives.
-            </p>
-        </div>
-    </section>
+        <section id="our-approach" class="py-5">
+            <div class="container">
+                <h2>Our Approach</h2>
+                <p>
+                    At Wizeminds, we combine our expertise in technology and finance with in-depth business process analysis. This unique approach enables us to identify areas for automation and optimization, ensuring our AI solutions align seamlessly with your business objectives.
+                </p>
+            </div>
+        </section>
 
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Wizeminds today to explore how our AI automation services can empower your business to thrive in an era of unprecedented opportunities.</h2>
-            <!-- Add your contact form or contact information here -->
-        </div>
-    </section>
+        <section id="contact" class="py-5">
+            <div class="container">
+                <h2>Contact Wizeminds today to explore how our AI automation services can empower your business to thrive in an era of unprecedented opportunities.</h2>
+                <!-- Add your contact form or contact information here -->
+            </div>
+        </section>
+    </main>
 
-    <footer>
+    <footer class="py-4 bg-light">
         <div class="container">
-            <p>&copy; 2023 Wizeminds. All rights reserved.</p>
+            <p class="text-center">&copy; 2023 Wizeminds. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- Bootstrap JS and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
