--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
     <title>Wizeminds | Unlocking Business Potential through Advanced AI Solutions</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .navbar {
+            background-color: #f8f9fa;
+        }
+        .navbar-brand, .nav-link {
+            color: #333;
+        }
+        .navbar-brand:hover, .nav-link:hover {
+            color: #007bff;
+        }
+        .py-5 {
+            padding: 3rem 0;
+        }
+        h2 {
+            color: #007bff;
+        }
+        footer {
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+    </style>
 </head>
 <body>
     <header>
