--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <h2>Unlocking Business Potential through Advanced AI Solutions</h2>
                 <p>
-                    Wizeminds is a forward-thinking AI Automation Agency co-founded by Michael Wolf and Jonathan TOuitou, distinguished experts with a collective experience of 45 years in the financial and technology sectors. At Wizeminds, we believe in harnessing the power of Artificial Intelligence to drive efficiency, optimize operations, and revolutionize the way businesses work.
+                    Wizeminds is a forward-thinking AI Automation Agency co-founded by distinguished experts with a collective experience of 45 years in the financial and technology sectors. At Wizeminds, we believe in harnessing the power of Artificial Intelligence to drive efficiency, optimize operations, and revolutionize the way businesses work.
                 </p>
             </div>
         </section>
