--- a/index.html
+++ b/index.html
@@ -116,21 +116,10 @@
                 <h2>Contact Wizeminds today to explore how our AI automation services can empower your business to thrive in an era of unprecedented opportunities.</h2>
                 <section id="contact" class="py-5">
     <div class="container">
-        <form>
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Your Name">
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Your Email">
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea class="form-control" id="message" rows="3" placeholder="Your Message"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+       <div class="contact">
+    <p>Si vous souhaitez nous contacter, veuillez envoyer un e-mail à <a href="mailto:contact@wizeminds.ca">contact@wizeminds.ca</a>.</p>
+</div>
+
     </div>
 </section>
 
