--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Wizeminds | Unlocking Business Potential through Advanced AI Solutions</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- AOS CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"/>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,13 +37,17 @@
             background-color: #007bff;
             border-color: #007bff;
         }
+        .intro-image {
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">Wizeminds</a>
+                <a class="navbar-brand animate__animated animate__bounce" href="#">Wizeminds</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -58,27 +66,28 @@
     </header>
 
     <main role="main">
-        <section id="introduction" class="py-5">
+        <section id="introduction" class="py-5" data-aos="zoom-in">
             <div class="container">
-                <h2>Unlocking Business Potential through Advanced AI Solutions</h2>
+                <img src="robot.jpg" alt="Robot" class="intro-image animate__animated animate__fadeInDown">
+                <h2 class="animate__animated animate__bounce">Unlocking Business Potential through Advanced AI Solutions</h2>
                 <p>
                     Wizeminds is a forward-thinking AI Automation Agency co-founded by distinguished experts with a collective experience of 45 years in the financial and technology sectors. At Wizeminds, we believe in harnessing the power of Artificial Intelligence to drive efficiency, optimize operations, and revolutionize the way businesses work.
                 </p>
             </div>
         </section>
 
-        <section id="vision" class="py-5">
+        <section id="vision" class="py-5" data-aos="fade-right">
             <div class="container">
-                <h2>Our Vision</h2>
+                <h2 class="animate__animated animate__bounce">Our Vision</h2>
                 <p>
                     To be the leading AI Automation Agency, empowering businesses across industries to achieve unparalleled growth and success through transformative AI solutions.
                 </p>
             </div>
         </section>
 
-        <section id="sets-us-apart" class="py-5">
+        <section id="sets-us-apart" class="py-5" data-aos="fade-left">
             <div class="container">
-                <h2>What Sets Us Apart</h2>
+                <h2 class="animate__animated animate__bounce">What Sets Us Apart</h2>
                 <ul>
                     <li>Domain Expertise: Our team's extensive background in both finance and technology enables us to understand your business challenges comprehensively. This expertise allows us to craft tailored AI solutions that align perfectly with your unique requirements.</li>
                     <li>Cutting-Edge AI Technologies: We leverage the latest advancements in AI, Python libraries, and OpenAI to deliver state-of-the-art automation solutions. Our dedication to staying at the forefront of innovation ensures you benefit from the most effective and up-to-date AI tools.</li>
@@ -87,9 +96,9 @@
             </div>
         </section>
 
-        <section id="business-use-cases" class="py-5">
+        <section id="business-use-cases" class="py-5" data-aos="fade-up-right">
             <div class="container">
-                <h2>Business Use Cases</h2>
+                <h2 class="animate__animated animate__bounce">Business Use Cases</h2>
                 <ul>
                     <li>Reconciliation & Accounting: Streamline your financial processes and automate tedious reconciliation tasks, ensuring accurate and timely accounting.</li>
                     <li>Document Summarization & Interpretation: Extract essential information from lengthy documents and interpret complex banking records with AI-powered document analysis.</li>
@@ -102,22 +111,22 @@
             </div>
         </section>
 
-        <section id="our-approach" class="py-5">
+        <section id="our-approach" class="py-5" data-aos="fade-up-left">
             <div class="container">
-                <h2>Our Approach</h2>
+                <h2 class="animate__animated animate__bounce">Our Approach</h2>
                 <p>
                     At Wizeminds, we combine our expertise in technology and finance with in-depth business process analysis. This unique approach enables us to identify areas for automation and optimization, ensuring our AI solutions align seamlessly with your business objectives.
                 </p>
             </div>
         </section>
 
-        <section id="contact" class="py-5">
+        <section id="contact" class="py-5" data-aos="zoom-in-up">
             <div class="container">
-                <h2>Contact Wizeminds today to explore how our AI automation services can empower your business to thrive in an era of unprecedented opportunities.</h2>
+                <h2 class="animate__animated animate__bounce">Contact Wizeminds today to explore how our AI automation services can empower your business to thrive in an era of unprecedented opportunities.</h2>
                 <section id="contact" class="py-5">
     <div class="container">
        <div class="contact">
-    <p>Si vous souhaitez nous contacter, veuillez envoyer un e-mail à <a href="mailto:contact@wizeminds.ca">contact@wizeminds.ca</a>.</p>
+    <p>To contact us please send an email to <a href="mailto:contact@wizeminds.ca">contact@wizeminds.ca</a>.</p>
 </div>
 
     </div>
@@ -127,14 +136,19 @@
         </section>
     </main>
 
-    <footer class="py-4 bg-light">
+    <footer class="py-4 bg-light" data-aos="zoom-out-down">
         <div class="container">
-            <p class="text-center">&copy; 2023 Wizeminds. All rights reserved.</p>
+            <p class="text-center animate__animated animate__bounce">&copy; 2023 Wizeminds. All rights reserved.</p>
         </div>
     </footer>
 
     <!-- Bootstrap JS and jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
