--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <main role="main">
         <section id="introduction" class="py-5" data-aos="zoom-in">
             <div class="container">
-                <img src="robot.jpg" alt="Robot" class="intro-image animate__animated animate__fadeInDown">
+                <img src="robot1.jpg" alt="Robot" class="intro-image animate__animated animate__fadeInDown">
                 <h2 class="animate__animated animate__bounce">Unlocking Business Potential through Advanced AI Solutions</h2>
                 <p>
                     Wizeminds is a forward-thinking AI Automation Agency co-founded by distinguished experts with a collective experience of 45 years in the financial and technology sectors. At Wizeminds, we believe in harnessing the power of Artificial Intelligence to drive efficiency, optimize operations, and revolutionize the way businesses work.
