--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand animate__animated animate__bounce" href="#">Wizeminds</a>
+                <a class="navbar-brand animate__animated animate__bounce" href="#">
+                <img src="logo.jpeg" alt="Logo" style="height:40px;"> <!-- Adjust the height as needed -->
+            </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
